[package]
name = "athanasia"
version = "0.1.0"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2018"
default-run = "athanasia"

[dependencies]
log = "^0.4.14"
flexi_logger = "^0.17.1"
chrono = "^0.4.19"
serde = { version = "^1.0.126", features = ["derive"] }
tokio = { version = "^1.6.0", features = ["full"] }
async-stream = "^0.3.2"
futures-core = "^0.3.15"
futures-util = "^0.3.15"
futures = "^0.3.15"
csv = "^1.1.6"
rand = "^0.8.3"
clap = "^3.0.0-beta.2"
